staticyaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staticweb-service
  namespace: staticweb
spec:
  selector:
    app: staticweb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
