staticyaml/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: staticweb-ing
  namespace: staticweb
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: static.dappepalli.co.in
    http:
      paths:
      - path:
        backend:
          serviceName: staticweb-service
            serviceport: 80
